jsc-only CMake build fails to link due to _initializeLibraryPathDiagnostics https://bugs.webkit.org/show_bug.cgi?id=245589

Reviewed by Yusuke Suzuki.

* Source/WTF/wtf/PlatformMac.cmake:
    Include LibraryPathDiagnostics.mm in the list of Mac/Cocoa-specific sources built in the full
    macOS CMake build.
* Source/WTF/wtf/Threading.cpp:
    Only enable the LibraryPathDiagnostics codepaths under PLATFORM(COCOA). This excludes
    the JSC-only build.

* Source/WebKit/PlatformMac.cmake:
* Source/WebKitLegacy/CMakeLists.txt:
    Make other fixes to the CMake configuration that allow me to start building with
    `build-webkit --cmake`. Fix the capitalization of "InprocessIDBServer.cpp", and remove
    some `_WKUserContent…` headers that were removed in https://commits.webkit.org/254090@main.
    This doesn't fully fix the Mac CMake build (there are still some compiler errors in libwebrtc),
    but I got far enough into the build to verify that the change to PlatformMac.cmake fixes the
    ability to link WTF with the LibraryPathDiagnostics content in a CMake build.

Canonical link: https://commits.webkit.org/254842@main